fix(styles): alter some styles for dark mode

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,4 +1,59 @@
-@import "./default-theme-overrides";
+// Override predefined CSS variables of the default VuePress theme
+// https://v2.vuepress.vuejs.org/reference/default-theme/styles.html#style-file
+
+// LIGHT MODE VARIABLES
+:root {
+  // brand colors
+  --c-brand: #1456cb; // blue-500
+
+  // text colors
+  --c-text: rgba(0, 0, 0, 0.7); // black-70
+
+  // font vars
+  --font-family: var(
+    --font-family-sans,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
+    sans-serif
+  );
+
+  // layout vars
+  --sidebar-width: 14rem;
+}
+
+// DARK MODE VARIABLES
+html.dark {
+  // brand colors
+  --c-brand: #1456cb; // blue-500
+
+  .theme-container .search-box input {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath fill='%23fff' fill-opacity='.45' fill-rule='evenodd' d='M6 12c-3.3137085 0-6-2.6862915-6-6s2.6862915-6 6-6 6 2.6862915 6 6c0 1.29583043-.410791 2.49571549-1.1092521 3.47653436l1.2305724 1.23057244 2.8232632 2.8338633c.3897175.3911808.3947266 1.0192147.005164 1.4087774-.3868655.3868655-1.014825.3873148-1.4087774-.005164l-2.8338633-2.8232632-1.23057244-1.2305724C8.49571549 11.589209 7.29583043 12 6 12zm4-6c0-2.209139-1.790861-4-4-4S2 3.790861 2 6s1.790861 4 4 4 4-1.790861 4-4z'/%3E%3C/svg%3E");
+  }
+}
+
+.code-group__li:not(:last-of-type) {
+  margin-right: 5px;
+}
+
+.code-group__nav-tab {
+  font-weight: 400;
+  transition: color 0.3 ease-in-out;
+
+  // Active tab
+  &.code-group__nav-tab-active {
+    font-weight: 700;
+    border-color: #fff;
+    border-bottom-width: 2px;
+  }
+}
 
 // plugin-search
 .search-box {
